# pico-project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Install-Linux.md  Install-Windows.md  LICENSE  README.md  TODO.md  build-bin.sh  build-rp2040.sh  build-test.sh  build-tests.sh  flash.py  notes.txt  test-runner.sh  upload_script.py
.github/workflows/: build-ci.yml  build.yml  ci.yml  test.yml  workflow.yml
PicoProbe-Precompiled/: picoprobe_1.uf2
cmake/: cmocka.cmake
src/: CMakeLists.txt  config.h  dht20.c  dht20.h  lcd.c  lcd.h  lis3dhtr.c  lis3dhtr.h  main.c
test/: CMakeLists.txt  main.c  mocks.c  mocks.h
test/dht20_tests/: CMakeLists.txt  main.c
test/lis3_tests/: CMakeLists.txt  main.c
test/mocks/: mocks.c  mocks.h
test/prototypes/: CMakeLists.txt  prototypes.c  prototypes.h
